--- a/tensorflow_mobilenet_transfer_learning.ipynb
+++ b/tensorflow_mobilenet_transfer_learning.ipynb
@@ -10,6 +10,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
