--- a/tensorflow_mobilenet_transfer_learning.ipynb
+++ b/tensorflow_mobilenet_transfer_learning.ipynb
@@ -675,7 +675,100 @@
      "text": [
       "2020-05-06 15:24:51 Starting - Starting the training job...\n",
       "2020-05-06 15:24:53 Starting - Launching requested ML instances......\n",
-      "2020-05-06 15:26:01 Starting - Preparing the instances for training."
+      "2020-05-06 15:26:01 Starting - Preparing the instances for training......\n",
+      "2020-05-06 15:27:14 Downloading - Downloading input data............\n",
+      "2020-05-06 15:29:24 Training - Training image download completed. Training in progress...\u001b[34m2020-05-06 15:29:29,548 sagemaker-containers INFO     Imported framework sagemaker_tensorflow_container.training\u001b[0m\n",
+      "\u001b[34m2020-05-06 15:29:30,099 sagemaker-containers INFO     Invoking user script\n",
+      "\u001b[0m\n",
+      "\u001b[34mTraining Env:\n",
+      "\u001b[0m\n",
+      "\u001b[34m{\n",
+      "    \"additional_framework_parameters\": {\n",
+      "        \"sagemaker_parameter_server_enabled\": true\n",
+      "    },\n",
+      "    \"channel_input_dirs\": {\n",
+      "        \"training\": \"/opt/ml/input/data/training\"\n",
+      "    },\n",
+      "    \"current_host\": \"algo-1\",\n",
+      "    \"framework_module\": \"sagemaker_tensorflow_container.training:main\",\n",
+      "    \"hosts\": [\n",
+      "        \"algo-1\"\n",
+      "    ],\n",
+      "    \"hyperparameters\": {\n",
+      "        \"batch_size\": 512,\n",
+      "        \"lr\": 0.0002,\n",
+      "        \"model_dir\": \"s3://sagemaker-us-east-1-209419068016/mobilenet/\",\n",
+      "        \"epochs\": 4\n",
+      "    },\n",
+      "    \"input_config_dir\": \"/opt/ml/input/config\",\n",
+      "    \"input_data_config\": {\n",
+      "        \"training\": {\n",
+      "            \"TrainingInputMode\": \"File\",\n",
+      "            \"S3DistributionType\": \"FullyReplicated\",\n",
+      "            \"RecordWrapperType\": \"None\"\n",
+      "        }\n",
+      "    },\n",
+      "    \"input_dir\": \"/opt/ml/input\",\n",
+      "    \"is_master\": true,\n",
+      "    \"job_name\": \"cnn-training-job-1588778691\",\n",
+      "    \"log_level\": 20,\n",
+      "    \"master_hostname\": \"algo-1\",\n",
+      "    \"model_dir\": \"/opt/ml/model\",\n",
+      "    \"module_dir\": \"s3://sagemaker-us-east-1-209419068016/cnn-training-job-1588778691/source/sourcedir.tar.gz\",\n",
+      "    \"module_name\": \"mobile-keras\",\n",
+      "    \"network_interface_name\": \"eth0\",\n",
+      "    \"num_cpus\": 32,\n",
+      "    \"num_gpus\": 4,\n",
+      "    \"output_data_dir\": \"/opt/ml/output/data\",\n",
+      "    \"output_dir\": \"/opt/ml/output\",\n",
+      "    \"output_intermediate_dir\": \"/opt/ml/output/intermediate\",\n",
+      "    \"resource_config\": {\n",
+      "        \"current_host\": \"algo-1\",\n",
+      "        \"hosts\": [\n",
+      "            \"algo-1\"\n",
+      "        ],\n",
+      "        \"network_interface_name\": \"eth0\"\n",
+      "    },\n",
+      "    \"user_entry_point\": \"mobile-keras.py\"\u001b[0m\n",
+      "\u001b[34m}\n",
+      "\u001b[0m\n",
+      "\u001b[34mEnvironment variables:\n",
+      "\u001b[0m\n",
+      "\u001b[34mSM_HOSTS=[\"algo-1\"]\u001b[0m\n",
+      "\u001b[34mSM_NETWORK_INTERFACE_NAME=eth0\u001b[0m\n",
+      "\u001b[34mSM_HPS={\"batch_size\":512,\"epochs\":4,\"lr\":0.0002,\"model_dir\":\"s3://sagemaker-us-east-1-209419068016/mobilenet/\"}\u001b[0m\n",
+      "\u001b[34mSM_USER_ENTRY_POINT=mobile-keras.py\u001b[0m\n",
+      "\u001b[34mSM_FRAMEWORK_PARAMS={\"sagemaker_parameter_server_enabled\":true}\u001b[0m\n",
+      "\u001b[34mSM_RESOURCE_CONFIG={\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"eth0\"}\u001b[0m\n",
+      "\u001b[34mSM_INPUT_DATA_CONFIG={\"training\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}}\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_DATA_DIR=/opt/ml/output/data\u001b[0m\n",
+      "\u001b[34mSM_CHANNELS=[\"training\"]\u001b[0m\n",
+      "\u001b[34mSM_CURRENT_HOST=algo-1\u001b[0m\n",
+      "\u001b[34mSM_MODULE_NAME=mobile-keras\u001b[0m\n",
+      "\u001b[34mSM_LOG_LEVEL=20\u001b[0m\n",
+      "\u001b[34mSM_FRAMEWORK_MODULE=sagemaker_tensorflow_container.training:main\u001b[0m\n",
+      "\u001b[34mSM_INPUT_DIR=/opt/ml/input\u001b[0m\n",
+      "\u001b[34mSM_INPUT_CONFIG_DIR=/opt/ml/input/config\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_DIR=/opt/ml/output\u001b[0m\n",
+      "\u001b[34mSM_NUM_CPUS=32\u001b[0m\n",
+      "\u001b[34mSM_NUM_GPUS=4\u001b[0m\n",
+      "\u001b[34mSM_MODEL_DIR=/opt/ml/model\u001b[0m\n",
+      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-us-east-1-209419068016/cnn-training-job-1588778691/source/sourcedir.tar.gz\u001b[0m\n",
+      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{\"sagemaker_parameter_server_enabled\":true},\"channel_input_dirs\":{\"training\":\"/opt/ml/input/data/training\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_tensorflow_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"batch_size\":512,\"epochs\":4,\"lr\":0.0002,\"model_dir\":\"s3://sagemaker-us-east-1-209419068016/mobilenet/\"},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"training\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"cnn-training-job-1588778691\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-1-209419068016/cnn-training-job-1588778691/source/sourcedir.tar.gz\",\"module_name\":\"mobile-keras\",\"network_interface_name\":\"eth0\",\"num_cpus\":32,\"num_gpus\":4,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"mobile-keras.py\"}\u001b[0m\n",
+      "\u001b[34mSM_USER_ARGS=[\"--batch_size\",\"512\",\"--epochs\",\"4\",\"--lr\",\"0.0002\",\"--model_dir\",\"s3://sagemaker-us-east-1-209419068016/mobilenet/\"]\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\u001b[0m\n",
+      "\u001b[34mSM_CHANNEL_TRAINING=/opt/ml/input/data/training\u001b[0m\n",
+      "\u001b[34mSM_HP_BATCH_SIZE=512\u001b[0m\n",
+      "\u001b[34mSM_HP_LR=0.0002\u001b[0m\n",
+      "\u001b[34mSM_HP_MODEL_DIR=s3://sagemaker-us-east-1-209419068016/mobilenet/\u001b[0m\n",
+      "\u001b[34mSM_HP_EPOCHS=4\u001b[0m\n",
+      "\u001b[34mPYTHONPATH=/opt/ml/code:/usr/local/bin:/usr/lib/python36.zip:/usr/lib/python3.6:/usr/lib/python3.6/lib-dynload:/usr/local/lib/python3.6/dist-packages:/usr/lib/python3/dist-packages\n",
+      "\u001b[0m\n",
+      "\u001b[34mInvoking script with the following command:\n",
+      "\u001b[0m\n",
+      "\u001b[34m/usr/bin/python3 mobile-keras.py --batch_size 512 --epochs 4 --lr 0.0002 --model_dir s3://sagemaker-us-east-1-209419068016/mobilenet/\n",
+      "\n",
+      "\u001b[0m\n"
      ]
     }
    ],
@@ -684,7 +777,7 @@
     "hyperparameters2 = {'epochs':4, 'lr':.0002, 'batch_size':512}\n",
     "\n",
     "for i, params in enumerate([hyperparameters1, hyperparameters2]):\n",
-    "    trial_name = f\"cnn-training-job-{script}-hidden-channels-{int(time.time())}\"\n",
+    "    trial_name = f\"cnn-training-job-{params}-hidden-channels-{int(time.time())}\"\n",
     "    cnn_trial = Trial.create(\n",
     "        trial_name=trial_name, \n",
     "        experiment_name=mobile_experiment.experiment_name,\n",
