--- a/tensorflow_mobilenet_transfer_learning.ipynb
+++ b/tensorflow_mobilenet_transfer_learning.ipynb
@@ -10,11 +10,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tqdm in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (4.44.1)\n",
+      "\u001b[33mWARNING: You are using pip version 20.0.2; however, version 20.2.2 is available.\n",
+      "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/tensorflow_p36/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Collecting sagemaker-experiments\n",
+      "  Downloading sagemaker_experiments-0.1.24-py3-none-any.whl (36 kB)\n",
+      "Requirement already satisfied: boto3>=1.12.8 in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (from sagemaker-experiments) (1.14.27)\n",
+      "Requirement already satisfied: botocore<1.18.0,>=1.17.27 in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (from boto3>=1.12.8->sagemaker-experiments) (1.17.27)\n",
+      "Requirement already satisfied: s3transfer<0.4.0,>=0.3.0 in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (from boto3>=1.12.8->sagemaker-experiments) (0.3.3)\n",
+      "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (from boto3>=1.12.8->sagemaker-experiments) (0.9.4)\n",
+      "Requirement already satisfied: docutils<0.16,>=0.10 in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (from botocore<1.18.0,>=1.17.27->boto3>=1.12.8->sagemaker-experiments) (0.15.2)\n",
+      "Requirement already satisfied: urllib3<1.26,>=1.20; python_version != \"3.4\" in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (from botocore<1.18.0,>=1.17.27->boto3>=1.12.8->sagemaker-experiments) (1.25.8)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (from botocore<1.18.0,>=1.17.27->boto3>=1.12.8->sagemaker-experiments) (2.8.1)\n",
+      "Requirement already satisfied: six>=1.5 in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.18.0,>=1.17.27->boto3>=1.12.8->sagemaker-experiments) (1.14.0)\n",
+      "Installing collected packages: sagemaker-experiments\n",
+      "Successfully installed sagemaker-experiments-0.1.24\n",
+      "\u001b[33mWARNING: You are using pip version 20.0.2; however, version 20.2.2 is available.\n",
+      "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/tensorflow_p36/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install tqdm\n",
     "!pip install sagemaker-experiments"
@@ -22,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/tensorflow_core/__init__.py:1467: The name tf.estimator.inputs is deprecated. Please use tf.compat.v1.estimator.inputs instead.\n",
+      "WARNING:tensorflow:From /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/tensorflow_core/__init__.py:1473: The name tf.estimator.inputs is deprecated. Please use tf.compat.v1.estimator.inputs instead.\n",
       "\n"
      ]
     }
@@ -80,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "!wget http://www.vision.caltech.edu/Image_Datasets/Caltech256/256_ObjectCategories.tar .\n",
+    "!wget https://caltech256-bucket.s3.amazonaws.com/256_ObjectCategories.tar .\n",
     "!tar -xvf 256_ObjectCategories.tar "
    ]
   },
